--- a/linalg_vector/dz_report.ipynb
+++ b/linalg_vector/dz_report.ipynb
@@ -106,7 +106,7 @@
     "# Получаем косинус угла между векторами\n",
     "v_cos = np.dot(x, y) / (np.linalg.norm(x) * np.linalg.norm(y))\n",
     "# Находим угол между векторами с помощью арккосинуса и переводим значения в градусы\n",
-    "v_angle = np.degrees(np.arccos(float(v_cos)))\n",
+    "v_angle = np.degrees(np.arccos(v_cos))\n",
     "\n",
     "print('Угол между векторами x и y:', v_angle)"
    ]
