--- a/DSV/dz_report.ipynb
+++ b/DSV/dz_report.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "Покажите, почему эти 3 события (A1, A2, A3) являются попарно независимыми, но не являются независимыми в совокупности.\n",
     "\n",
-    "Решение:\n",
+    "#### Решение:\n",
     "\n",
     "Для события А количество благоприятствующих значений равно 4. Общее количество комбинаций равно $\\overline{A}^3_2 = 2^3 = 8$.\n",
     "Соответственно вероятность $P(A1) = 4/8 = 1/2$\n",
@@ -183,7 +183,7 @@
     "\n",
     "Тогда $P(A1A2A3) = 2/8 = 1/4$, а $P(A1)*P(A2)*P(A3) = 1/2 * 1/2 * 1/2 = 1/8$.\n",
     "\n",
-    "Так как $P(A1A2A3) \\neq P(A1)*P(A2)*P(A3)$, то делаем вывод зависимости в совокупности событий A1, A2 и A3,"
+    "Так как $P(A1A2A3) \\neq P(A1)*P(A2)*P(A3)$, то делаем вывод о зависимости в совокупности событий A1, A2 и A3,"
    ]
   },
   {
